envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
  # Proxy for Pingpong
    - name: listener_0
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 10001
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                codec_type: auto
                stat_prefix: egress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      retry_policy:
                        retry_on: 5xx
                        num_retries: 3
                        per_try_timeout: 5s
                        retry_back_off:
                          base_interval: 0.1s
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: pingpong
                http_filters:
                  - name: envoy.router
    # Proxy for www.google.com
    - name: listener_1
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            host_rewrite: www.google.com
                            cluster: service_google
                http_filters:
                  - name: envoy.router

  clusters:
    - name: pingpong
      dns_lookup_family: V4_ONLY
      connect_timeout: 5s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      common_lb_config:
        # Set panic threshold to 0 to prevent panic mode from
        # adding back ejected host when there are no host in the cluster
        healthy_panic_threshold:
          value: 0
      hosts:
        - socket_address:
            address: pingpong
            port_value: 6060
#        - socket_address:
#            address: pingpong2
#            port_value: 6060
        # Respond with 503 if connection parameters exceed the threshold
      circuit_breakers:
        thresholds:
          max_connections: 1
          max_pending_requests: 1
          max_retries: 3
          track_remaining: true
        # Eject a host out of the cluster if there are too many consecutive 5xx
      outlier_detection:
        consecutive_5xx: 10
        # Eject until the cluster is empty
        max_ejection_percent: 100
        interval: 30s
        base_ejection_time: 60s
    # Google cluster
    - name: service_google
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      # Comment out the following line to test on v6 networks
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: service_google
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: www.google.com
                      port_value: 443
      tls_context:
        sni: www.google.com
